fix: Correct company name from SRSC to SRS Consulting
Fixed spelling error in landing page footer.
Changed: SRSC Consulting → SRS Consulting

Note: Bundle identifier remains com.thesrsconsulting.tapp as originally specified.

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -514,7 +514,7 @@
             <div class="footer-section">
                 <h4>eThavanai Book</h4>
                 <p>Electronic daily installment ledger for modern lenders.</p>
-                <p style="margin-top: 1rem;">© 2025 SRSC Consulting</p>
+                <p style="margin-top: 1rem;">© 2025 SRS Consulting</p>
             </div>
             <div class="footer-section">
                 <h4>Product</h4>
