refactor: Consolidate privacy and terms pages into main API server
Moved privacy and terms pages to use the existing API server instead of separate Node server:

✅ Updated server/src/index.js:
- Added explicit routes for /privacy and /terms
- Updated server startup console log
- Both pages now served from tapi.thesrsconsulting.in

✅ Updated app.json:
- Changed privacyPolicyUrl from tapp to tapi domain
- Using clean URL: /privacy instead of /privacy.html

✅ Updated HTML files:
- Changed all tapp URLs to tapi URLs
- Updated internal links to use relative paths
- Privacy and Terms now link to each other properly
- Added footer links to home page

🔗 New URLs:
- Privacy: https://tapi.thesrsconsulting.in/privacy
- Terms: https://tapi.thesrsconsulting.in/terms
- Home: https://tapi.thesrsconsulting.in/home

Benefits:
- Single server to maintain
- Consistent domain (tapi.thesrsconsulting.in)
- Clean URLs without .html extension
- All legal pages accessible from same API server

--- a/server/public/privacy.html
+++ b/server/public/privacy.html
@@ -348,7 +348,7 @@
             <p>If you have any questions, concerns, or requests regarding this Privacy Policy or your data:</p>
             <p>
                 <strong>Email:</strong> <a href="mailto:support@thesrsconsulting.in">support@thesrsconsulting.in</a><br>
-                <strong>Website:</strong> <a href="https://tapp.thesrsconsulting.in">https://tapp.thesrsconsulting.in</a><br>
+                <strong>Website:</strong> <a href="https://tapi.thesrsconsulting.in">https://tapi.thesrsconsulting.in</a><br>
                 <strong>Developer:</strong> SRS Consulting
             </p>
         </div>
@@ -374,6 +374,7 @@
             <p><strong>Effective Date:</strong> October 26, 2025</p>
             <p><strong>Version:</strong> 1.0.0</p>
             <p>&copy; 2025 SRS Consulting. All rights reserved.</p>
+            <p><a href="/terms">Terms of Service</a> | <a href="/home">Home</a></p>
         </div>
     </div>
 </body>
