--- a/server/public/terms.html
+++ b/server/public/terms.html
@@ -449,7 +449,7 @@
         <p>We strive to make the App accessible to users with disabilities. If you encounter accessibility issues, please contact us.</p>
 
         <h2><span class="section-number">18.</span> Entire Agreement</h2>
-        <p>These Terms, along with our <a href="privacy.html">Privacy Policy</a>, constitute the entire agreement between you and eThavanai Book regarding the use of the App.</p>
+        <p>These Terms, along with our <a href="/privacy">Privacy Policy</a>, constitute the entire agreement between you and eThavanai Book regarding the use of the App.</p>
 
         <h2><span class="section-number">19.</span> Severability</h2>
         <p>If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions will continue in full force and effect.</p>
@@ -462,7 +462,7 @@
             <p>For questions, concerns, or notices regarding these Terms:</p>
             <p>
                 <strong>Email:</strong> <a href="mailto:support@thesrsconsulting.in">support@thesrsconsulting.in</a><br>
-                <strong>Website:</strong> <a href="https://tapp.thesrsconsulting.in">https://tapp.thesrsconsulting.in</a><br>
+                <strong>Website:</strong> <a href="https://tapi.thesrsconsulting.in">https://tapi.thesrsconsulting.in</a><br>
                 <strong>Developer:</strong> SRS Consulting
             </p>
         </div>
@@ -497,7 +497,7 @@
             <p><strong>Effective Date:</strong> October 26, 2025</p>
             <p><strong>Version:</strong> 1.0.0</p>
             <p>&copy; 2025 SRS Consulting. All rights reserved.</p>
-            <p><a href="privacy.html">Privacy Policy</a> | <a href="/">Home</a></p>
+            <p><a href="/privacy">Privacy Policy</a> | <a href="/home">Home</a></p>
         </div>
     </div>
 </body>
