refactor: Update contact info and legal page links
Updated all contact information and links across the project:

📧 Email Changes:
- Old: support@thesrsconsulting.in
- New: thesrsconsulting@gmail.com
- Updated in: home page, privacy, terms, store listings

🔗 Website URL Updates:
- All links now point to: https://tapi.thesrsconsulting.in/home
- Updated from root domain to /home endpoint

📄 Legal Page Links:
- Home page footer now links to /privacy and /terms
- Privacy and Terms pages link to each other properly
- All internal navigation working correctly

📝 Files Updated:
- server/public/index.html (footer links)
- server/public/privacy.html (contact info, Tamil section)
- server/public/terms.html (contact info, Tamil section, summary)
- store-listings/en-US.md (email, website)
- store-listings/ta-IN.md (email, website)
- Documentation files (ANDROID_PLAY_STORE_GUIDE.md, DEPLOY_NOW.md)

✅ All URLs consistent with tapi.thesrsconsulting.in domain
✅ Gmail contact email for better accessibility
✅ Clean navigation between all pages

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -526,12 +526,12 @@
                 <h4>Company</h4>
                 <a href="/admin">Admin Panel</a>
                 <a href="#">About Us</a>
-                <a href="mailto:support@thesrsconsulting.in">Contact</a>
+                <a href="mailto:thesrsconsulting@gmail.com">Contact</a>
             </div>
             <div class="footer-section">
                 <h4>Legal</h4>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
+                <a href="/privacy">Privacy Policy</a>
+                <a href="/terms">Terms of Service</a>
                 <a href="#">Data Security</a>
             </div>
         </div>
