--- a/server/public/privacy.html
+++ b/server/public/privacy.html
@@ -347,8 +347,8 @@
             <h2>Contact Us</h2>
             <p>If you have any questions, concerns, or requests regarding this Privacy Policy or your data:</p>
             <p>
-                <strong>Email:</strong> <a href="mailto:support@thesrsconsulting.in">support@thesrsconsulting.in</a><br>
-                <strong>Website:</strong> <a href="https://tapi.thesrsconsulting.in">https://tapi.thesrsconsulting.in</a><br>
+                <strong>Email:</strong> <a href="mailto:thesrsconsulting@gmail.com">thesrsconsulting@gmail.com</a><br>
+                <strong>Website:</strong> <a href="https://tapi.thesrsconsulting.in/home">https://tapi.thesrsconsulting.in/home</a><br>
                 <strong>Developer:</strong> SRS Consulting
             </p>
         </div>
@@ -367,7 +367,7 @@
 
         <div class="tamil-section">
             <h3>தமிழில் (In Tamil):</h3>
-            <p>இந்த தனியுரிமைக் கொள்கையின் தமிழ் மொழிபெயர்ப்பு விரைவில் கிடைக்கும். கேள்விகளுக்கு, தயவுசெய்து <a href="mailto:support@thesrsconsulting.in">support@thesrsconsulting.in</a> என்ற மின்னஞ்சலில் தொடர்பு கொள்ளவும்.</p>
+            <p>இந்த தனியுரிமைக் கொள்கையின் தமிழ் மொழிபெயர்ப்பு விரைவில் கிடைக்கும். கேள்விகளுக்கு, தயவுசெய்து <a href="mailto:thesrsconsulting@gmail.com">thesrsconsulting@gmail.com</a> என்ற மின்னஞ்சலில் தொடர்பு கொள்ளவும்.</p>
         </div>
 
         <div class="footer">
