--- a/server/public/terms.html
+++ b/server/public/terms.html
@@ -461,8 +461,8 @@
             <h2><span class="section-number">21.</span> Contact Information</h2>
             <p>For questions, concerns, or notices regarding these Terms:</p>
             <p>
-                <strong>Email:</strong> <a href="mailto:support@thesrsconsulting.in">support@thesrsconsulting.in</a><br>
-                <strong>Website:</strong> <a href="https://tapi.thesrsconsulting.in">https://tapi.thesrsconsulting.in</a><br>
+                <strong>Email:</strong> <a href="mailto:thesrsconsulting@gmail.com">thesrsconsulting@gmail.com</a><br>
+                <strong>Website:</strong> <a href="https://tapi.thesrsconsulting.in/home">https://tapi.thesrsconsulting.in/home</a><br>
                 <strong>Developer:</strong> SRS Consulting
             </p>
         </div>
@@ -474,7 +474,7 @@
 
         <div class="tamil-section">
             <h3>தமிழில் (In Tamil):</h3>
-            <p>இந்த சேவை விதிமுறைகளின் தமிழ் மொழிபெயர்ப்பு விரைவில் கிடைக்கும். கேள்விகளுக்கு, தயவுசெய்து <a href="mailto:support@thesrsconsulting.in">support@thesrsconsulting.in</a> என்ற மின்னஞ்சலில் தொடர்பு கொள்ளவும்.</p>
+            <p>இந்த சேவை விதிமுறைகளின் தமிழ் மொழிபெயர்ப்பு விரைவில் கிடைக்கும். கேள்விகளுக்கு, தயவுசெய்து <a href="mailto:thesrsconsulting@gmail.com">thesrsconsulting@gmail.com</a> என்ற மின்னஞ்சலில் தொடர்பு கொள்ளவும்.</p>
         </div>
 
         <div class="summary-box">
@@ -490,7 +490,7 @@
                 <li>✓ We can update terms with notice</li>
                 <li>✓ You can delete your account anytime</li>
             </ul>
-            <p><strong>Questions?</strong> Email <a href="mailto:support@thesrsconsulting.in">support@thesrsconsulting.in</a></p>
+            <p><strong>Questions?</strong> Email <a href="mailto:thesrsconsulting@gmail.com">thesrsconsulting@gmail.com</a></p>
         </div>
 
         <div class="footer">
